@@ -1,4 +1,4 @@
 #define VERSION_MAJOR 0
 #define VERSION_MINOR 0
-#define VERSION_PATCH 5
+#define VERSION_PATCH 8
 
